--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body{
 
 .line-white{
 	width: 4em;
-	border: 2px solid #FFFFFF;
+	border: 2px solid #000000;
 	margin: 1em auto;
 }
 .bg-portafolio{
